--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -98,6 +98,7 @@ stages:
 - template: azure-pipelines-deploy.yml
   parameters:
     depends: 'Dev'
+    azureSubscription: AzureProdSubscription
     environtName: 'Prod'
     resourceGroupName: 'rg-mychess-prod'
     cdn: '$(CDN-Prod)'
