--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,6 +38,7 @@ stages:
 
     - powershell: |
         cd src/MyChessReact
+        yarn install
         yarn build
       displayName: 'Build React app'
 
