Add react unit tests to CI

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,7 @@ stages:
     - powershell: |
         cd src/MyChessReact
         yarn install
+        yarn test --watchAll false --verbose --ci true
         yarn build
       displayName: 'Build React app'
 
