Add game list view to home page

--- a/src/MyChessReact/src/configuration.sample.json
+++ b/src/MyChessReact/src/configuration.sample.json
@@ -1,4 +1,5 @@
 {
+    "endpoint": "http://localhost:7071",
     "clientId": "your client id",
     "applicationIdURI": "api://your api identifier/"
 }
