Add app insights telemetry based on demo app
These additions are based on this demo app:
Azure-Samples/application-insights-react-demo

--- a/src/MyChessReact/src/configuration.sample.json
+++ b/src/MyChessReact/src/configuration.sample.json
@@ -1,5 +1,6 @@
 {
     "endpoint": "http://localhost:7071",
     "clientId": "your client id",
-    "applicationIdURI": "api://your api identifier/"
+    "applicationIdURI": "api://your api identifier/",
+    "instrumentationKey": "your application insights instrumentation key"
 }
