--- a/src/MyChessReact/package.json
+++ b/src/MyChessReact/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
+    "jest-fetch-mock": "^3.0.3",
     "msal": "^1.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -45,5 +46,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/redux-mock-store": "^1.0.2",
+    "redux-mock-store": "^1.5.4"
   }
 }
