--- a/azure-pipelines-deploy.yml
+++ b/azure-pipelines-deploy.yml
@@ -20,7 +20,7 @@ stages:
       runOnce:
         deploy:
           steps:
-          - download:
+          - download: current
           - task: AzurePowerShell@4
             displayName: 'Azure PowerShell script: FilePath'
             inputs:
