--- a/src/MyChess.Functions/MyChess.Functions.csproj
+++ b/src/MyChess.Functions/MyChess.Functions.csproj
@@ -9,6 +9,9 @@
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.6" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MyChess\MyChess.csproj" />
+  </ItemGroup>
+  <ItemGroup>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
