--- a/src/MyChessReact/package.json
+++ b/src/MyChessReact/package.json
@@ -8,6 +8,7 @@
     "msal": "^1.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
@@ -41,16 +42,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/chai": "^4.2.11",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.4",
-    "jest-fetch-mock": "^3.0.3",
-    "@types/chai": "^4.2.11",
     "@types/redux-mock-store": "^1.0.2",
     "chai": "^4.2.0",
+    "jest-fetch-mock": "^3.0.3",
     "redux-mock-store": "^1.5.4"
   }
 }
