Move configuration management to be runtime based

--- a/.gitignore
+++ b/.gitignore
@@ -350,4 +350,4 @@ MigrationBackup/
 .ionide/
 
 # Exclude local configuration file
-src/MyChessReact/src/configuration.json
+src/MyChessReact/public/configuration.js
