--- a/src/MyChessReact/package.json
+++ b/src/MyChessReact/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@microsoft/applicationinsights-react-js": "^2.5.4",
     "@microsoft/applicationinsights-web": "^2.5.4",
+    "@types/react-modal": "^3.10.5",
     "msal": "^1.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
