Change alerting structure

--- a/azure-pipelines-deploy.yml
+++ b/azure-pipelines-deploy.yml
@@ -4,6 +4,7 @@ parameters:
   resourceGroupName: 'rg-mychess-default'
   cdn: 'mychess-default'
   customDomain: 'customdomain.local'
+  alertEmailAddress: ""
   azureSubscription: AzureDevSubscription
 
 stages:
@@ -26,7 +27,7 @@ stages:
             inputs:
               azureSubscription: ${{ parameters.azureSubscription }}
               ScriptPath: '$(Pipeline.Workspace)/deploy/deploy.ps1'
-              ScriptArguments: '-ResourceGroupName ${{ parameters.resourceGroupName }} -EnvironmentName ${{ parameters.environtName }} -CDN ${{ parameters.cdn }} -CustomDomain ${{ parameters.customDomain }} -AppRootFolder "$(Pipeline.Workspace)/web/"'
+              ScriptArguments: '-ResourceGroupName ${{ parameters.resourceGroupName }} -EnvironmentName ${{ parameters.environtName }} -CDN ${{ parameters.cdn }} -CustomDomain ${{ parameters.customDomain }} -AlertEmailAddress ${{ parameters.alertEmailAddress }} -AppRootFolder "$(Pipeline.Workspace)/web/"'
               azurePowerShellVersion: LatestVersion
 
           - task: AzureRmWebAppDeployment@4
