--- a/azure-pipelines-deploy.yml
+++ b/azure-pipelines-deploy.yml
@@ -5,6 +5,8 @@ parameters:
   cdn: 'mychess-default'
   customDomain: 'customdomain.local'
   alertEmailAddress: ""
+  webPushPublicKey: ""
+  webPushPrivateKey: ""
   azureSubscription: AzureDevSubscription
 
 stages:
@@ -27,7 +29,15 @@ stages:
             inputs:
               azureSubscription: ${{ parameters.azureSubscription }}
               ScriptPath: '$(Pipeline.Workspace)/deploy/deploy.ps1'
-              ScriptArguments: '-ResourceGroupName ${{ parameters.resourceGroupName }} -EnvironmentName ${{ parameters.environtName }} -CDN ${{ parameters.cdn }} -CustomDomain ${{ parameters.customDomain }} -AlertEmailAddress ${{ parameters.alertEmailAddress }} -AppRootFolder "$(Pipeline.Workspace)/web/"'
+              ScriptArguments: |
+                -ResourceGroupName ${{ parameters.resourceGroupName }} 
+                -EnvironmentName ${{ parameters.environtName }} 
+                -CDN ${{ parameters.cdn }} 
+                -CustomDomain ${{ parameters.customDomain }} 
+                -AlertEmailAddress ${{ parameters.alertEmailAddress }} 
+                -WebPushPublicKey ${{ parameters.webPushPublicKey }} 
+                -WebPushPrivateKey ${{ parameters.webPushPrivateKey }} 
+                -AppRootFolder "$(Pipeline.Workspace)/web/"'
               azurePowerShellVersion: LatestVersion
 
           - task: AzureRmWebAppDeployment@4
