Fix line breaks

--- a/azure-pipelines-deploy.yml
+++ b/azure-pipelines-deploy.yml
@@ -30,14 +30,14 @@ stages:
               azureSubscription: ${{ parameters.azureSubscription }}
               ScriptPath: '$(Pipeline.Workspace)/deploy/deploy.ps1'
               ScriptArguments: |
-                -ResourceGroupName ${{ parameters.resourceGroupName }} 
-                -EnvironmentName ${{ parameters.environtName }} 
-                -CDN ${{ parameters.cdn }} 
-                -CustomDomain ${{ parameters.customDomain }} 
-                -AlertEmailAddress ${{ parameters.alertEmailAddress }} 
-                -WebPushPublicKey ${{ parameters.webPushPublicKey }} 
-                -WebPushPrivateKey ${{ parameters.webPushPrivateKey }} 
-                -AppRootFolder "$(Pipeline.Workspace)/web/"'
+                -ResourceGroupName ${{ parameters.resourceGroupName }} `
+                -EnvironmentName ${{ parameters.environtName }} `
+                -CDN ${{ parameters.cdn }} `
+                -CustomDomain ${{ parameters.customDomain }} `
+                -AlertEmailAddress ${{ parameters.alertEmailAddress }} `
+                -WebPushPublicKey ${{ parameters.webPushPublicKey }} `
+                -WebPushPrivateKey ${{ parameters.webPushPrivateKey }} `
+                -AppRootFolder "$(Pipeline.Workspace)/web/"
               azurePowerShellVersion: LatestVersion
 
           - task: AzureRmWebAppDeployment@4
