--- a/src/MyChessReact/public/manifest.json
+++ b/src/MyChessReact/public/manifest.json
@@ -19,7 +19,7 @@
     }
   ],
   "start_url": ".",
-  "display": "minimal-ui",
+  "display": "fullscreen",
   "theme_color": "#FFFFFF",
   "background_color": "#FFFFFF",
   "orientation": "portrait"
