--- a/src/MyChessReact/package.json
+++ b/src/MyChessReact/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@azure/msal-browser": "^2.0.0",
     "@microsoft/applicationinsights-react-js": "^3.0.0",
     "@microsoft/applicationinsights-web": "^2.5.4",
     "@types/react-modal": "^3.10.5",
     "@types/workbox-build": "^5.0.0",
-    "msal": "^1.2.2",
     "react": "^16.13.1",
     "react-cookie-consent": "^5.0.1",
     "react-dom": "^16.13.1",
