--- a/src/MyChessReact/package.json
+++ b/src/MyChessReact/package.json
@@ -6,6 +6,7 @@
     "@azure/msal-browser": "^2.0.0",
     "@microsoft/applicationinsights-react-js": "^3.0.0",
     "@microsoft/applicationinsights-web": "^2.5.4",
+    "@microsoft/signalr": "^5.0.0",
     "@types/react-modal": "^3.10.5",
     "@types/workbox-build": "^5.0.0",
     "react": "^16.13.1",
