--- a/src/MyChessReact/package.json
+++ b/src/MyChessReact/package.json
@@ -9,6 +9,7 @@
     "@microsoft/signalr": "^5.0.0",
     "@types/react-modal": "^3.10.5",
     "@types/workbox-build": "^5.0.0",
+    "object-path": "^0.11.5",
     "react": "^16.13.1",
     "react-cookie-consent": "^5.0.1",
     "react-dom": "^16.13.1",
@@ -20,7 +21,9 @@
     "redux": "^4.0.5",
     "redux-devtools": "^3.5.0",
     "redux-thunk": "^2.3.0",
-    "typescript": "~3.9.5"
+    "serialize-javascript": "^5.0.1",
+    "typescript": "~3.9.5",
+    "yargs-parser": "^20.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
