--- a/src/MyChessReact/package.json
+++ b/src/MyChessReact/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@azure/msal-browser": "^2.0.0",
+    "@azure/msal-react": "^1.0.0-beta.0",
     "@microsoft/applicationinsights-react-js": "^3.0.0",
     "@microsoft/applicationinsights-web": "^2.5.4",
     "@microsoft/signalr": "^5.0.0",
