--- a/src/MyChess.Client/Properties/launchSettings.json
+++ b/src/MyChess.Client/Properties/launchSettings.json
@@ -11,9 +11,9 @@
     "MyChess.Client": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "https://localhost:7205;http://localhost:5205",
+      "applicationUrl": "https://localhost:5000;http://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
