--- a/src/MyChess.Client/wwwroot/appsettings.sample.json
+++ b/src/MyChess.Client/wwwroot/appsettings.sample.json
@@ -6,7 +6,10 @@
   */
   "AzureAd": {
     "Authority": "https://login.microsoftonline.com/common",
-    "ClientId": "your client id here",
+    "ClientId": "your client id",
     "ValidateAuthority": true
-  }
+  },
+  "applicationIdURI": "api://your api identifier/",
+  "instrumentationKey": "your application insights instrumentation key",
+  "webPushPublicKey": "your webpush public key"
 }
