--- a/src/MyChess.Client/MyChess.Client.csproj
+++ b/src/MyChess.Client/MyChess.Client.csproj
@@ -9,6 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\appsettings.json.sample" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\appsettings.json.sample" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BlazorApplicationInsights" Version="1.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.3" PrivateAssets="all" />
